[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Scripts/Resources.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/FFFFORWA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Cards/Cards.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scripts/Interaction.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scenes/Combat/test.gd" type="Script" id=5]
[ext_resource path="res://Assets/Scenes/Combat/ALLY.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Scenes/Combat/Enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Fonts/Font_Basic.tres" type="DynamicFont" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Combat" type="Node2D"]
process_priority = 10
script = ExtResource( 5 )
card_scene = ExtResource( 3 )
enemy_count = 1
enemy_scene = ExtResource( 7 )
ally_count = 5
ally_scene = ExtResource( 6 )

[node name="Cards" type="HBoxContainer" parent="."]
visible = false
margin_left = 192.0
margin_top = 512.0
margin_right = 672.0
margin_bottom = 578.0
rect_scale = Vector2( 1.333, 1.333 )
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resources" type="Control" parent="."]
margin_right = 192.0
margin_bottom = 592.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy" type="ProgressBar" parent="Resources"]
margin_left = 8.0
margin_top = 512.0
margin_right = 328.0
margin_bottom = 544.0
rect_rotation = -90.0
max_value = 3.0
step = 1.0
value = 3.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cur_turn" type="Label" parent="Resources"]
margin_left = 256.0
margin_top = 16.0
margin_right = 768.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "YOUR TURN"
align = 1

[node name="Round" type="Label" parent="Resources"]
margin_left = 32.0
margin_top = 16.0
margin_right = 72.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 8 )
text = "0/3"

[node name="Interaction" type="Control" parent="."]
process_priority = -10
margin_bottom = 600.0
mouse_filter = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemies" type="VBoxContainer" parent="Interaction"]
margin_left = 64.0
margin_top = 64.0
margin_right = 256.0
margin_bottom = 536.0
custom_constants/separation = 84
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Allies" type="VBoxContainer" parent="Interaction"]
margin_left = 896.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 536.0
custom_constants/separation = 96
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card_Effect" type="Node2D" parent="."]

[node name="Particles2D" type="CPUParticles2D" parent="Card_Effect"]
emitting = false
amount = 64
lifetime = 0.5
local_coords = false
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 32.0
scale_amount = 4.0
color = Color( 1, 0, 0, 1 )

[node name="check_cards" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="attack_timer" type="Timer" parent="."]
wait_time = 0.666
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="win_screen" type="Control" parent="." groups=["combat_win"]]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="check_cards" to="." method="_on_check_cards_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
